--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
   <body class="bg-gray-50">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+      <body>
+    <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
+  </body>
+</html>
+
 </body>
 </html>
